[tool.poetry]
name = "simple-post-echo"
version = "0.1.0"
description = ""
authors = ["Nate Kennison <sidewayzs13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
